crates/valen-parser/tests/snapshots/lexer__char_literal_escape.snap
---
source: crates/valen-parser/tests/lexer.rs
expression: "fmt(\"fn main() { let c = '\\\\n'; }\")"
---
Fn @ 0..2
Ident("main") @ 3..7
LParen @ 7..8
RParen @ 8..9
LBrace @ 10..11
Let @ 12..15
Ident("c") @ 16..17
Eq @ 18..19
CharLit('\n') @ 20..24
Semi @ 24..25
RBrace @ 26..27
