crates/valen-parser/tests/snapshots/lexer__empty_fn.snap
---
source: crates/valen-parser/tests/lexer.rs
expression: "fmt(\"fn main() {}\")"
---
Fn @ 0..2
Ident("main") @ 3..7
LParen @ 7..8
RParen @ 8..9
LBrace @ 10..11
RBrace @ 11..12
