crates/valen-parser/tests/snapshots/lexer__float_literal_no_suffix.snap
---
source: crates/valen-parser/tests/lexer.rs
expression: "fmt(\"fn main() { let x = 2.718; }\")"
---
Fn @ 0..2
Ident("main") @ 3..7
LParen @ 7..8
RParen @ 8..9
LBrace @ 10..11
Let @ 12..15
Ident("x") @ 16..17
Eq @ 18..19
DoubleLit(2.718) @ 20..25
Semi @ 25..26
RBrace @ 27..28
