crates/valen-parser/tests/snapshots/lexer__fstring_multiple_interp.snap
---
source: crates/valen-parser/tests/lexer.rs
expression: "fmt(r#\"fn main() { let s = f\"{a} + {b} = {c}\"; }\"#)"
---
Fn @ 0..2
Ident("main") @ 3..7
LParen @ 7..8
RParen @ 8..9
LBrace @ 10..11
Let @ 12..15
Ident("s") @ 16..17
Eq @ 18..19
FStringLit("{a} + {b} = {c}") @ 20..38
Semi @ 38..39
RBrace @ 40..41
